--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -7,7 +7,7 @@
 
     <com.qiushui.blurredview.BlurredView
         android:id="@+id/yahooweather_blurredview"
-        app:src="@drawable/bg03"
+        app:src="@mipmap/bg03"
         app:move="true"
         app:disableBlurred="false"
         android:layout_width="match_parent"
