在Style.xml中加入windowBackground背景顏色與SplashActivity的載入顏色 一樣解決preview window白頻問題

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#5c5c5c</color>
     <color name="colorPrimaryDark">#5c5c5c</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="windowBackground">#F4C042</color>
 </resources>
