使用PullReflashLayout下拉更新資料(尚未Request撈取)

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,8 +10,7 @@
     <com.openweather.openweather.View.SunBabyLoadingView
         android:layout_height="wrap_content"
         android:layout_width="250dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="212dp" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
