TemperatureView顯示溫度動畫

--- a/app/src/main/res/layout/rv_header_weather_now.xml
+++ b/app/src/main/res/layout/rv_header_weather_now.xml
@@ -97,8 +97,8 @@
         android:layout_marginStart="12dp" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         app:srcCompat="@mipmap/mostly_sunny"
         android:id="@+id/imageView3"
         android:layout_above="@+id/tableRow2"
