--- a/app/src/main/res/layout/rv_item1.xml
+++ b/app/src/main/res/layout/rv_item1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="15dp"
     android:layout_width="match_parent"
@@ -11,125 +12,137 @@
     android:id="@+id/relativeLayout">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mon"
-        android:id="@+id/tv_day"
+        android:text="目前狀態"
+        android:id="@+id/tv_condition"
         android:textColor="#fff"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:textSize="22sp"
 
         />
 
     <View
-        android:layout_below="@+id/tv_day"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
         android:background="#fff"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        />
-    <TextView
-        android:layout_below="@+id/tv_day"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Jan 01 09:00 AM"
-        android:id="@+id/tv_date"
-        android:textColor="#fff"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="3dp"
-        android:textSize="20sp"
+        android:layout_height="1dp"
+        android:id="@+id/view"
+        android:layout_below="@+id/tv_condition"
+        android:layout_alignLeft="@+id/tv_condition"
+        android:layout_alignStart="@+id/tv_condition"
+        android:layout_width="220dp" />
 
-        />
-    <View
-        android:layout_below="@+id/tv_date"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#fff"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:id="@+id/view2" />
-
-    <TextView
-        android:layout_below="@+id/tv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TAIPEI"
-        android:id="@+id/tv_location"
-        android:textColor="#fff"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="0dp"
-        android:textSize="30sp"
-
-        />
-
-    <TextView
-        android:layout_below="@+id/tv_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="15°C"
-        android:id="@+id/tv_temp"
-        android:textColor="#fff"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="0dp"
-        android:textSize="55sp"
-        />
-
-    <TextView
-        android:layout_below="@+id/tv_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="12°C"
-        android:id="@+id/tv_lowtemp"
-        android:textColor="#fff"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="3dp"
-        android:textSize="30sp"
-        />
-
-    <View
-
-        android:layout_width="2dp"
-        android:layout_height="25dp"
-        android:background="#fff"
-
-        android:layout_alignTop="@+id/tv_lowtemp"
-        android:layout_toRightOf="@+id/tv_lowtemp"
-        android:layout_toEndOf="@+id/tv_lowtemp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="8dp"
-        android:id="@+id/view" />
-
-    <TextView
-        android:layout_below="@+id/tv_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.openweather.openweather.View.TemperatureView
+        android:id="@+id/temperatureView"
+        android:layout_width="100dp"
+        android:layout_height="170dp"
+        android:layout_alignTop="@+id/tv_condition"
         android:layout_toRightOf="@+id/view"
+        android:layout_toEndOf="@+id/view"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp" />
 
-        android:text="19°C"
-        android:id="@+id/tv_highttemp"
-        android:textColor="#fff"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="3dp"
-        android:textSize="30sp"
-        />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:layout_marginLeft="22dp"
+        android:id="@+id/linearLayout"
+        android:layout_marginStart="22dp"
+        android:layout_below="@+id/view"
+        android:layout_alignLeft="@+id/view"
+        android:layout_alignStart="@+id/view"
+        android:layout_toStartOf="@+id/temperatureView">
 
-    <ImageView
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="10dp"
+        <TextView
+            android:layout_below="@+id/tv_condition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="體感溫度:13°C"
+            android:id="@+id/tv_date"
+            android:textColor="#fff"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="3dp"
+            android:textSize="15sp"
 
-        android:layout_marginRight="2dp"
-        android:layout_marginEnd="2dp"
-        android:id="@+id/imageView"
-        android:layout_alignTop="@+id/tv_location"
-        android:layout_alignRight="@+id/view2"
-        android:layout_alignEnd="@+id/view2" />
+            android:fontFamily="sans-serif" />
+
+        <TextView
+            android:layout_below="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="台北市"
+            android:id="@+id/tv_location"
+            android:textColor="#fff"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="0dp"
+            android:textSize="25sp"
+
+            />
+
+        <TextView
+            android:layout_below="@+id/tv_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="15°C"
+            android:id="@+id/tv_temp"
+            android:textColor="#fff"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="0dp"
+            android:textSize="30sp"
+            />
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tableRow">
+
+            <TextView
+                android:layout_below="@+id/tv_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="12°C"
+                android:id="@+id/tv_lowtemp"
+                android:textColor="#fff"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="3dp"
+                android:textSize="20sp"
+                />
+
+            <View
+
+                android:layout_width="2dp"
+                android:background="#fff"
+                android:layout_alignTop="@+id/tv_lowtemp"
+                android:layout_toRightOf="@+id/tv_lowtemp"
+                android:layout_toEndOf="@+id/tv_lowtemp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginStart="8dp"
+                android:id="@+id/view2"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:layout_below="@+id/tv_temp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/view"
+
+                android:text="19°C"
+                android:id="@+id/tv_highttemp"
+                android:textColor="#fff"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="3dp"
+                android:textSize="20sp"
+                />
+        </TableRow>
+
+    </LinearLayout>
+
 </RelativeLayout>
