--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -40,9 +40,9 @@
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/tvCity"
-                       android:text="目前天氣"
+                       android:text="台北市"
                        android:textColor="@android:color/white"
-                       android:textSize="18sp"/>
+                       android:textSize="20sp"/>
 
                    <TextView
                        android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
                        android:id="@+id/tvTime"
                        android:text="14:28 CST"
                        android:textColor="@android:color/white"
-                       android:textSize="10sp"/>
+                       android:textSize="12sp"/>
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
 
