--- a/app/src/main/res/layout/rv_item1.xml
+++ b/app/src/main/res/layout/rv_item1.xml
@@ -18,11 +18,10 @@
         android:id="@+id/tv_condition"
         android:textColor="#fff"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="5dp"
         android:textSize="22sp"
 
-        />
+        android:layout_marginBottom="2dp" />
 
     <View
         android:background="#fff"
@@ -53,15 +52,14 @@
         android:layout_marginStart="22dp"
         android:layout_below="@+id/view"
         android:layout_alignLeft="@+id/view"
-        android:layout_alignStart="@+id/view"
-        android:layout_toStartOf="@+id/temperatureView">
+        android:layout_alignStart="@+id/view">
 
         <TextView
             android:layout_below="@+id/tv_condition"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="體感溫度:13°C"
-            android:id="@+id/tv_date"
+            android:id="@+id/tvChill"
             android:textColor="#fff"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
@@ -71,11 +69,11 @@
             android:fontFamily="sans-serif" />
 
         <TextView
-            android:layout_below="@+id/tv_date"
+            android:layout_below="@+id/tvChill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="台北市"
-            android:id="@+id/tv_location"
+            android:id="@+id/tvLocation"
             android:textColor="#fff"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
@@ -85,7 +83,7 @@
             />
 
         <TextView
-            android:layout_below="@+id/tv_location"
+            android:layout_below="@+id/tvLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="15°C"
@@ -106,7 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="12°C"
-                android:id="@+id/tv_lowtemp"
+                android:id="@+id/tv_low"
                 android:textColor="#fff"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="1dp"
@@ -118,9 +116,9 @@
 
                 android:layout_width="2dp"
                 android:background="#fff"
-                android:layout_alignTop="@+id/tv_lowtemp"
-                android:layout_toRightOf="@+id/tv_lowtemp"
-                android:layout_toEndOf="@+id/tv_lowtemp"
+                android:layout_alignTop="@+id/tv_low"
+                android:layout_toRightOf="@+id/tv_low"
+                android:layout_toEndOf="@+id/tv_low"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginStart="8dp"
@@ -134,7 +132,7 @@
                 android:layout_toRightOf="@+id/view"
 
                 android:text="19°C"
-                android:id="@+id/tv_highttemp"
+                android:id="@+id/tv_high"
                 android:textColor="#fff"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="1dp"
