--- a/app/src/main/res/layout/rv_item1.xml
+++ b/app/src/main/res/layout/rv_item1.xml
@@ -2,143 +2,141 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="15dp"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/round_box"
-    android:layout_below="@+id/weather"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
-    android:id="@+id/relativeLayout">
+    android:layout_below="@+id/weather"
+    android:layout_marginBottom="15dp"
+    android:layout_marginTop="15dp"
+    android:background="@drawable/round_box">
 
     <TextView
+        android:id="@+id/tv_condition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="目前狀態"
-        android:id="@+id/tv_condition"
-        android:textColor="#fff"
+        android:layout_marginBottom="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="5dp"
-        android:textSize="20sp"
+        android:text="目前狀態"
+        android:textColor="#fff"
 
-        android:layout_marginBottom="2dp" />
+        android:textSize="20sp" />
 
     <View
-        android:background="#fff"
-        android:layout_height="1dp"
         android:id="@+id/view"
-        android:layout_below="@+id/tv_condition"
+        android:layout_width="220dp"
+        android:layout_height="0.5dp"
         android:layout_alignLeft="@+id/tv_condition"
         android:layout_alignStart="@+id/tv_condition"
-        android:layout_width="220dp" />
+        android:layout_below="@+id/tv_condition"
+        android:background="#fff" />
 
     <com.openweather.openweather.View.TemperatureView
         android:id="@+id/temperatureView"
         android:layout_width="100dp"
         android:layout_height="170dp"
         android:layout_alignTop="@+id/tv_condition"
-        android:layout_toRightOf="@+id/view"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/view"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp" />
+        android:layout_toRightOf="@+id/view" />
 
     <LinearLayout
-        android:orientation="vertical"
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:layout_marginLeft="22dp"
-        android:id="@+id/linearLayout"
-        android:layout_marginStart="22dp"
-        android:layout_below="@+id/view"
+        android:layout_alignBottom="@+id/temperatureView"
         android:layout_alignLeft="@+id/view"
-        android:layout_alignStart="@+id/view">
+        android:layout_alignStart="@+id/view"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="38dp"
+        android:layout_marginStart="38dp"
+        android:layout_weight="0.5"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_below="@+id/tv_condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="體感溫度:13°C"
             android:id="@+id/tvChill"
-            android:textColor="#fff"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="3dp"
-            android:textSize="15sp"
-
-            android:fontFamily="sans-serif" />
-
-        <TextView
-            android:layout_below="@+id/tvChill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="台北市"
-            android:id="@+id/tvLocation"
-            android:textColor="#fff"
+            android:layout_below="@+id/tv_condition"
+            android:layout_marginBottom="3dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif"
+            android:text="體感溫度:13°C"
+            android:textColor="#fff"
+
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/tvLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvChill"
             android:layout_marginBottom="0dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:text="台北市"
+            android:textColor="#fff"
             android:textSize="25sp"
 
             />
 
         <TextView
-            android:layout_below="@+id/tvLocation"
+            android:id="@+id/tv_temp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="15°C"
-            android:id="@+id/tv_temp"
-            android:textColor="#fff"
+            android:layout_below="@+id/tvLocation"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="0dp"
-            android:textSize="30sp"
-            />
+            android:text="15°C"
+            android:textColor="#fff"
+            android:textSize="30sp" />
 
         <TableRow
+            android:id="@+id/tableRow"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tableRow">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:layout_below="@+id/tv_temp"
+                android:id="@+id/tv_low"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12°C"
-                android:id="@+id/tv_low"
-                android:textColor="#fff"
+                android:layout_below="@+id/tv_temp"
+                android:layout_marginBottom="3dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="1dp"
-                android:layout_marginBottom="3dp"
-                android:textSize="20sp"
-                />
+                android:text="12°C"
+                android:textColor="#fff"
+                android:textSize="20sp" />
 
             <View
 
+                android:id="@+id/view2"
                 android:layout_width="2dp"
-                android:background="#fff"
+                android:layout_height="20dp"
                 android:layout_alignTop="@+id/tv_low"
-                android:layout_toRightOf="@+id/tv_low"
-                android:layout_toEndOf="@+id/tv_low"
-                android:layout_marginTop="5dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginStart="8dp"
-                android:id="@+id/view2"
-                android:layout_height="20dp" />
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/tv_low"
+                android:layout_toRightOf="@+id/tv_low"
+                android:background="#fff" />
 
             <TextView
-                android:layout_below="@+id/tv_temp"
+                android:id="@+id/tv_high"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/view"
+                android:layout_below="@+id/tv_temp"
 
-                android:text="19°C"
-                android:id="@+id/tv_high"
-                android:textColor="#fff"
+                android:layout_marginBottom="3dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="1dp"
-                android:layout_marginBottom="3dp"
-                android:textSize="20sp"
-                />
+                android:layout_toRightOf="@+id/view"
+                android:text="19°C"
+                android:textColor="#fff"
+                android:textSize="20sp" />
         </TableRow>
 
     </LinearLayout>
