--- a/app/src/main/res/layout/rv_item2.xml
+++ b/app/src/main/res/layout/rv_item2.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginTop="36dp"
-    android:background="#44000000"
     android:paddingLeft="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+    android:background="@drawable/round_box">
 
     <TextView
         android:text="WeatherInfo2"
