大氣跟風速連接資料，並且修正溫度計View精確度

--- a/app/src/main/res/layout/rv_atmosphere.xml
+++ b/app/src/main/res/layout/rv_atmosphere.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="5dp"
-        android:text="大氣與氣壓"
+        android:text="大氣和氣壓"
         android:textColor="#fff"
 
         android:textSize="20sp" />
@@ -118,7 +118,7 @@
             android:id="@+id/tvPressure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.23"
+            android:layout_weight="0.45"
             android:gravity="center_horizontal"
             android:text="1020 millibars"
             android:textColor="#fff"
@@ -128,7 +128,7 @@
             android:id="@+id/tvHumidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
+            android:layout_weight="1.37"
             android:gravity="center_horizontal"
             android:text="48 %"
             android:textColor="#fff"
@@ -138,7 +138,7 @@
             android:id="@+id/tvVisiblity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:text="16.1 km"
             android:textColor="#fff"
