修改activity_weather_now.xml介面排版 字串資源檔使用多國語言偵測，目前天氣描述依系統語言首次寫入資料庫

--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -7,7 +7,7 @@
 
     <com.qiushui.blurredview.BlurredView
         android:id="@+id/yahooweather_blurredview"
-        app:src="@mipmap/tainan"
+        app:src="@mipmap/test"
         app:move="true"
         app:disableBlurred="false"
         android:layout_width="match_parent"
