--- a/app/src/main/res/layout/rv_header_weather_now.xml
+++ b/app/src/main/res/layout/rv_header_weather_now.xml
@@ -1,108 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/textview"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <TableRow
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginBottom="128dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/tvTemp"
-        android:layout_alignStart="@+id/tvTemp"
-        android:id="@+id/tableRow2">
+    <RelativeLayout
+        android:layout_width="290dp"
+        android:layout_height="290dp"
+        android:background="@drawable/circle_shape"
+        android:layout_marginTop="97dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
 
         <ImageView
-            app:srcCompat="@mipmap/low"
-        android:layout_alignBottom="@+id/tvHigh"
-        android:layout_toRightOf="@+id/tvHigh"
-        android:layout_toEndOf="@+id/tvHigh"
-            android:id="@+id/ivLow"
-            android:layout_weight="1"
-            android:layout_marginTop="6dp"
-            android:layout_width="15dp"
-            android:layout_height="15dp" />
+            android:id="@+id/imageView3"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginBottom="18dp"
+            app:srcCompat="@mipmap/cloudy"
+            android:layout_above="@+id/tvTemp"
+            android:layout_alignLeft="@+id/tableRow2"
+            android:layout_alignStart="@+id/tableRow2" />
 
         <TextView
-        android:text="18°"
-        android:textColor="@android:color/background_light"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/ivLow"
-        android:layout_toRightOf="@+id/ivLow"
-        android:layout_toEndOf="@+id/ivLow"
-        android:id="@+id/tvLow"
-        android:textSize="20sp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginStart="3dp" />
-
-        <ImageView
-            app:srcCompat="@mipmap/high"
-            android:id="@+id/ivHigh"
-            android:layout_alignTop="@+id/tvTemp"
-            android:layout_alignLeft="@+id/tvTemp"
-            android:layout_alignStart="@+id/tvTemp"
-            android:layout_weight="1"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="6dp"
-            android:layout_width="15dp"
-            android:layout_height="15dp" />
-
-        <TextView
-            android:text="30°"
-            android:textColor="@android:color/background_light"
+            android:id="@+id/tvWeather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvHigh"
-            android:layout_alignBottom="@+id/ivHigh"
-            android:layout_toRightOf="@+id/ivHigh"
-            android:layout_toEndOf="@+id/ivHigh"
-            android:textSize="20sp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginStart="3dp" />
+            android:layout_above="@+id/tvTemp"
+            android:layout_marginBottom="35dp"
+            android:layout_toEndOf="@+id/imageView3"
+            android:layout_toRightOf="@+id/imageView3"
+            android:text="晴時多雲"
+            android:textColor="@android:color/background_light" />
 
-    </TableRow>
+        <TextView
+            android:id="@+id/tvTemp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="37dp"
+            android:layout_marginRight="37dp"
+            android:fontFamily="sans-serif-thin"
+            android:text="23°"
+            android:textColor="@android:color/background_light"
+            android:textSize="125sp" />
 
-    <TextView
-        android:text="晴時多雲"
-        android:textColor="@android:color/background_light"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvWeather"
-        android:layout_alignBottom="@+id/imageView3"
-        android:layout_toRightOf="@+id/imageView3"
-        android:layout_toEndOf="@+id/imageView3"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp" />
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
 
-    <ImageView
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        app:srcCompat="@mipmap/mostly_sunny"
-        android:id="@+id/imageView3"
-        android:layout_above="@+id/tableRow2"
-        android:layout_alignLeft="@+id/tableRow2"
-        android:layout_alignStart="@+id/tableRow2" />
+            <ImageView
+                android:id="@+id/ivLow"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_alignBottom="@+id/tvHigh"
+                android:layout_marginTop="6dp"
+                android:layout_toEndOf="@+id/tvHigh"
+                android:layout_toRightOf="@+id/tvHigh"
+                android:layout_weight="1"
+                app:srcCompat="@mipmap/low" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:fontFamily="sans-serif-thin"
-        android:gravity="bottom"
-        android:text="23°"
-        android:textSize="125sp"
-        android:id="@+id/tvTemp"
-        android:textColor="@android:color/background_light"
-        android:layout_marginLeft="13dp"
-        android:layout_marginStart="13dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tvLow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/ivLow"
+                android:layout_marginLeft="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@+id/ivLow"
+                android:layout_toRightOf="@+id/ivLow"
+                android:text="18°"
+                android:textColor="@android:color/background_light"
+                android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/ivHigh"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_alignLeft="@+id/tvTemp"
+                android:layout_alignStart="@+id/tvTemp"
+                android:layout_alignTop="@+id/tvTemp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="6dp"
+                android:layout_weight="1"
+                app:srcCompat="@mipmap/high" />
+
+            <TextView
+                android:id="@+id/tvHigh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/ivHigh"
+                android:layout_marginLeft="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_toEndOf="@+id/ivHigh"
+                android:layout_toRightOf="@+id/ivHigh"
+                android:text="30°"
+                android:textColor="@android:color/background_light"
+                android:textSize="20sp" />
+
+        </TableRow>
+    </RelativeLayout>
 
 </RelativeLayout>
