--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
     <com.qiushui.blurredview.BlurredView
         android:id="@+id/yahooweather_blurredview"
-        app:src="@mipmap/tainan2"
+        app:src="@mipmap/ny"
         app:move="true"
         app:disableBlurred="false"
         android:layout_width="match_parent"
@@ -54,13 +54,15 @@
            </android.support.v7.widget.Toolbar>
 
            <ImageView
+               android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               app:srcCompat="@mipmap/ic_hamburg"
-               android:id="@+id/imageView"
-               android:layout_alignParentTop="true"
+               android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
-               android:layout_alignParentEnd="true" />
+               android:layout_alignParentTop="true"
+               android:layout_marginRight="5dp"
+               android:layout_marginTop="10dp"
+               app:srcCompat="@mipmap/menu" />
        </RelativeLayout>
        <com.baoyz.widget.PullRefreshLayout
            android:id="@+id/swipeRefreshLayout"
