--- a/app/src/main/res/layout/rv_item1.xml
+++ b/app/src/main/res/layout/rv_item1.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="5dp"
-        android:text="目前狀態"
+        android:text="@string/tv_condition"
         android:textColor="#fff"
 
         android:textSize="20sp" />
@@ -64,7 +64,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:fontFamily="sans-serif"
-            android:text="體感溫度:13°C"
+            android:text="@string/tvChill"
             android:textColor="#fff"
 
             android:textSize="15sp" />
