--- a/app/src/main/res/layout/rv_wind.xml
+++ b/app/src/main/res/layout/rv_wind.xml
@@ -14,13 +14,13 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_condition"
+        android:id="@+id/tv_wind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="5dp"
-        android:text="風速和風向"
+        android:text="@string/tv_wind"
         android:textColor="#fff"
 
         android:textSize="20sp" />
