--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#5c5c5c</color>
     <color name="colorAccent">#FF4081</color>
     <color name="windowBackground">#F4C042</color>
+    <color name="setting_toolbar">#f5f5f7</color>
 </resources>
