--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="windowBackground">#F4C042</color>
     <color name="setting_toolbar">#f5f5f7</color>
+    <color name="ArcSolidColor">#6effe1a2</color>
+    <color name="SunColor">#fcd682</color>
 </resources>
