--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
     <com.qiushui.blurredview.BlurredView
         android:id="@+id/yahooweather_blurredview"
-        app:src="@mipmap/tainan2"
+        app:src="@mipmap/bg05"
         app:move="true"
         app:disableBlurred="false"
         android:layout_width="match_parent"
