--- a/app/src/main/res/layout/rv_header_weather_now.xml
+++ b/app/src/main/res/layout/rv_header_weather_now.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,14 +13,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="97dp"
         android:background="@drawable/circle_shape">
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_above="@+id/tvWeather"
-            android:layout_centerHorizontal="true"
-            app:srcCompat="@mipmap/cloudy" />
+        <com.github.pwittchen.weathericonview.WeatherIconView
+            android:id="@+id/my_weather_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            custom:weatherIconResource="@string/wi_day_sunny_overcast"
+            custom:weatherIconColor="@android:color/black"
+            custom:weatherIconSize="70"
+            android:layout_centerHorizontal="true"/>
 
         <TextView
             android:id="@+id/tvWeather"
