--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="windowBackground">#F4C042</color>
     <color name="setting_toolbar">#f5f5f7</color>
     <color name="ArcSolidColor">#6effe1a2</color>
+    <color name="TimeTextColor">#fff</color>
     <color name="SunColor">#fcd682</color>
     <color name="chartHigh">#fefd006e</color>
     <color name="chartLow">#00ccff</color>
