--- a/app/src/main/res/layout/rv_item1.xml
+++ b/app/src/main/res/layout/rv_item1.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
@@ -43,7 +43,7 @@
         android:layout_toRightOf="@+id/view" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/temperatureView"
